<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gazoraBejelentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gazora_bejelentes"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/navigateToLoginPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bejelentkezes"
        android:onClick="goToLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gazoraBejelentes"
        app:layout_constraintVertical_bias="0.388" />

    <Button
        android:id="@+id/navigateToSignUpPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regisztracio"
        android:onClick="goToSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigateToLoginPageButton"
        app:layout_constraintVertical_bias="0.037" />

</androidx.constraintlayout.widget.ConstraintLayout>