<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/felso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/gas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="9"
                android:gravity="end"
                android:padding="4dp"
                android:text="@string/placeholder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/m3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="4dp"
                android:text="@string/m3"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/felso"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="9"
                android:gravity="end"
                android:padding="4dp"
                android:text="@string/placeholder"
                android:textSize="20sp" />

            <Button
                android:id="@+id/deleteGas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/torles" />

        </LinearLayout>


    </RelativeLayout>


</androidx.cardview.widget.CardView>